<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_teams">

    <fragment
        android:id="@+id/navigation_teams"
        android:name="de.herrmann.tippkick.spielrundenverwaltung.ui.teams.TeamsFragment"
        android:label="@string/title_teams"
        tools:layout="@layout/fragment_teams">
    </fragment>

    <fragment
        android:id="@+id/navigation_competition"
        android:name="de.herrmann.tippkick.spielrundenverwaltung.ui.competition.CompetitionFragment"
        android:label="@string/title_competition"
        tools:layout="@layout/fragment_competition" />

    <fragment
        android:id="@+id/navigation_play"
        android:name="de.herrmann.tippkick.spielrundenverwaltung.ui.play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" />
</navigation>