<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chose_competition_type" />

    <Spinner
        android:id="@+id/competition_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/eingabe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_competition"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginBottom="20dp"
        app:layout_constraintBaseline_toTopOf="parent" />

    <TextView
        android:id="@+id/number_of_teams_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chose_number_of_teams" />

    <Spinner
        android:id="@+id/number_of_teams_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/number_of_groups_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chose_number_of_groups" />

    <Spinner
        android:id="@+id/number_of_groups_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/number_of_teams_per_group_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chose_number_of_teams_per_group" />

    <Spinner
        android:id="@+id/number_of_teams_per_group_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/teams_list"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/teams_chosen"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        app:backgroundTint="#F0E6FF" />

    <RelativeLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/cancel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/cancel_white"
            android:layout_alignParentLeft="true"
            android:background="#6200EE" />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/delete_white"
            android:layout_centerInParent="true"
            android:background="#6200EE" />

        <ImageButton
            android:id="@+id/add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/check_white"
            android:layout_alignParentRight="true"
            android:background="#6200EE" />

    </RelativeLayout>

    <Button
        android:id="@+id/finish_competition"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/start_drawing"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        app:backgroundTint="#6200EE" />
</LinearLayout>